# GHCL_HACKATHON_SUBMISSION

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/app/: db.py  main.py
backend/app/core/: security.py
backend/app/ml/: NLU_MODEL_Colab_.py  __init__.py  biometrics.py  nlu.py  stt.py  tts.py
backend/app/routers/: auth.py  banking.py  dialogue.py
backend/app/schemas/: auth.py  banking.py  dialogue.py
backend/app/services/: __init__.py  auth.py  banking.py  dialogue.py
backend/app/ws/: __init__.py  voice_socket.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/dashboard/: page.tsx
frontend/app/loans/: page.tsx
frontend/app/login/: page.tsx
frontend/app/offers/: page.tsx
frontend/app/reminders/: page.tsx
frontend/app/transactions/: page.tsx
frontend/app/transfer/: page.tsx
frontend/app/voice/: page.tsx
frontend/components/: VoiceHelper.tsx  VoiceInputField.tsx  VoiceRecorder.tsx
frontend/lib/: api.ts  utils.ts  websocket.ts
